# console_core

./: main.py  pyproject.toml  requirements.txt
plugin_core/: __init__.py
plugin_nested/: __init__.py
plugin_test/: __init__.py
src/console/: __init__.py  exceptions.py  execution.py  loading.py  registration.py  variables.py
terminal/: __init__.py  base_commands.py  command.py  command_set.py  commands.py  decorators.py  exceptions.py  execution.py  loading.py  registration.py  terminal.py  variables.py
tests/: test_command_set.py  test_complete.py  test_execution.py  test_loading.py  test_registration.py
tests/data/: plugin_not_found.txt  plugins.txt
tests/plugin_test/: __init__.py
