[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-core"
version = "0.0.1"
authors = [
    { name="Leikt SOL'REIHIN", email="leikt.solreihin@gmail.com" },
]
description = "A core package for terminal applications."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Leikt/console_core"
"Bug Tracker" = "https://github.com/Leikt/console_core/issues"